2008-02-19  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (SHT_GNU_ATTRIBUTES): New macro.

2008-02-15  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5737]
	* resolv/netdb.h: Make NI_MAXHOST and NI_MAXSERV available when
	__USE_MISC is defined.

2008-02-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sys/timerfd.h: New file.
	* sysdeps/unix/sysv/linux/Makefile [subdir=misc] (sysdep_headers): Add
	sys/timerfd.h.
	* sysdeps/unix/sysv/linux/syscalls.list: Add timerfd_create,
	timerfd_gettime, timerfd_settime.
	* sysdeps/unix/sysv/linux/Versions: Add timerfd_create,
	timerfd_gettime, timerfd_settime for GLIBC_2.8.

2008-02-08  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (NT_PPC_SPE): New macro.

2008-02-06  Roland McGrath  <roland@redhat.com>

	* Makerules ($(common-objpfx)sysd-rules):
	Depend on $(sysdep-makeconfigs).

2008-01-31  Roland McGrath  <roland@redhat.com>

	[BZ #5442]
	* configure.in: Use -print-file-name if it yields a directory,
	for each of include and include-fixed.
	* configure: Regenerated.

	* Makeconfig (sysd-rules-targets): New variable.
	* sysdeps/unix/make-syscalls.sh: Use it in the rules emitted.
	* sysdeps/unix/Makefile (omit-deps): Append variants for each target.

2008-01-30  Roland McGrath  <roland@redhat.com>

	* manual/libc.texinfo: Update back-cover text.

	* elf/elf.h (NT_386_TLS): New macro.

2008-01-29  Roland McGrath  <roland@redhat.com>

	* Makeconfig (sysd-rules-patterns): New variable.
	* Makerules ($(common-objpfx)sysd-rules): Drive the loop from that.
	(check-inhibit-asm): New canned sequence, replaces ...
	(open-check-inhibit-asm, close-check-inhibit-asm): ... these, removed.
	* elf/rtld-Rules ($(objpfx)rtld-%.os): Use $(rtld-CPPFLAGS) in commands.
	(rtld-CPPFLAGS): Renamed from CPPFLAGS-rtld.
	(CFLAGS-rtld): Variable removed.

2008-01-24  Roland McGrath  <roland@redhat.com>

	* configure.in: Let configure fragments set base_os.
	* configure: Regenerated.
